--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.13",
     "daisyui": "^5.0.3",
+    "oh-vue-icons": "^1.0.0-rc3",
     "parse": "^6.0.0",
     "tailwindcss": "^4.0.13",
     "vue": "^3.5.13",
